[tool.poetry]
name = "scraper"
version = "0.2.0"
description = "A flexible multi-source scraper application designed to gather information from GitHub repositories and web pages. Leverages both Git-based and Scrapy-based approaches to handle different source types effectively."
authors = ["kouloumos <kouloumosa@gmail.com>", "urvish patel <urvishp80@gmail.com>"] 
readme = "README.md"
packages = [{include = "scraper"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "^8.1.7"
pyyaml = "^6.0.2"
elasticsearch = "^8.15.0"
pydantic = "^2.9.1"
gitpython = "^3.1.43"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.5"
scrapy = "^2.11.2"
openai = "^1.52.2"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.14.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
seaborn = "^0.13.2"
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.poetry.scripts]
scraper = "scraper.cli:cli"
playground = "scraper.run_jupyter:main"
notebook = "scraper.run_jupyter:main"

